--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.35</version>
+        </dependency>
     </dependencies>
 
     <build>
